--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8 || ^17.0 || ^18.0",
-    "@types/react-dom": "^16.8 || ^17.0 || ^18.0",
-    "react": "^18.2.0",
+    "@reduxjs/toolkit": "2.0.0-beta.0",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.4",
+    "axios": "1.4.0",
+    "events": "^3.3.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": ">=0.59",
-    "react-redux": "^8.0.5",
-    "redux": "^4"
+    "react-native": "0.71.8",
+    "react-redux": "8.0.7",
+    "react-router-dom": "6.12.0",
+    "redux": "4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
